# porto-bank-transaction-cluster

./: README.md  environment.yml
porto-bank-transaction-cluster/: .gitignore  README.md  pyproject.toml
porto-bank-transaction-cluster/conf/: logging.yml
porto-bank-transaction-cluster/notebooks/: [Clustering]_Submission_Akhir_BMLP_Your_Name.ipynb  clustering_bank_transaction.ipynb  clustring_bank_tran.ipynb
porto-bank-transaction-cluster/src/porto_bank_transaction_cluster/: __init__.py  __main__.py  settings.py
porto-bank-transaction-cluster/tests/pipelines/data_science/: test_pipeline.py
